change 'sexo' to 'gênero'

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <input id="confirm-password" type="password" name="password" size="8" maxlength="8" placeholder="8 dígitos">
                         </div>
                         <div class="gender-group">
-                            <label for="gender">Sexo:</label>
+                            <label for="gender">Gênero:</label>
                             <div class="gender-input"> 
                                 <label for="male-gender">Masculino</label>
                                 <input id="male-gender" type="radio" name="gender" checked>
